--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
         </aeon-datepicker>
       </p-->
       <p>
-        <aeon-datepicker locale="es" style="--rgb: 170, 10, 10">
-          <input type="date" />
+        <aeon-datepicker
+          locale="es"
+          defaultDate="2019-04-06"
+          style="--rgb: 170, 10, 10"
+        >
+          <input id="date" type="date" value="2018-06-06" />
         </aeon-datepicker>
       </p>
       <button>
