optional time picker

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           style="--rgb: 170, 10, 10"
         >
           <input id="date" type="date" value="2018-06-06" />
+          <!--input id="time" type="time" value="05:19" /-->
         </aeon-datepicker>
       </p>
       <button>
