has native implementations

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
           locale="es"
           defaultDate="2019-04-06"
           style="--rgb: 170, 10, 10"
+          usenative
+          confirmondate
         >
           <input id="date" type="date" value="2018-06-06" />
           <input id="time" type="time" value="05:19" />
