more pickers in example

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <head>
     <title>DatePicker</title>
     <meta charset="utf-8" />
@@ -15,16 +13,16 @@
     </h1>
 
     <form>
-      <!--p>
+      <p>
         <input type="date" />
       </p>
       <p>
-        <aeon-datepicker>
+        <aeon-datepicker confirmondate>
           <input id="date" type="date" value="2020-04-06" />
         </aeon-datepicker>
       </p>
       <p>
-        <aeon-datepicker>
+        <aeon-datepicker usenative>
           <input
             id="date2"
             type="date"
@@ -32,7 +30,7 @@
             placeholder="Start date"
           />
         </aeon-datepicker>
-      </p-->
+      </p>
       <p>
         <aeon-datepicker
           locale="es"
