--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>html {font-size:16px;}</style>
+    <style>
+      html {
+        font-size: 16px;
+      }
+    </style>
     <script src="/src/app.js" type="module"></script>
   </head>
   <body>
@@ -17,22 +21,23 @@
       <p>
         <input type="date" />
       </p>
-      <p>
+      <!--p>
         <aeon-datepicker confirmondate>
-          <input id="date" type="date" value="2020-04-06" />
+          <input id="date3" type="date" value="2020-04-06" />
         </aeon-datepicker>
-      </p>
+      </p-->
       <p>
-        <aeon-datepicker usenative>
+        <aeon-datepicker defaultdate="2020-01-01" defaulttime="19:30">
           <input
             id="date2"
             type="date"
             value="2020-04-06"
             placeholder="Start date"
           />
+          <input id="time2" type="time" />
         </aeon-datepicker>
       </p>
-      <p>
+      <!--p>
         <aeon-datepicker
           locale="es"
           defaultDate="2019-04-06"
@@ -41,7 +46,7 @@
           <input id="date" type="date" value="2018-06-06" />
           <input id="time" type="time" value="05:19" />
         </aeon-datepicker>
-      </p>
+      </p-->
       <button>
         Go
       </button>
