--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
-      html {
+      body {
         font-size: 16px;
+        font-family: sans-serif;
+      }
+
+      input {
+        font-size: inherit;
+        font-family: inherit;
       }
     </style>
     <script src="/src/app.js" type="module"></script>
