--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <input type="date" />
       </p>
       <!--p>
-        <aeon-datepicker confirmondate>
+        <aeon-datepicker confirm-on-date>
           <input id="date3" type="date" value="2020-04-06" />
         </aeon-datepicker>
       </p-->
       <p>
-        <aeon-datepicker defaultdate="2020-01-01" defaulttime="19:30">
+        <aeon-datepicker default-date="2020-01-01" default-time="19:30">
           <input
             id="date2"
             type="date"
@@ -46,7 +46,7 @@
       <!--p>
         <aeon-datepicker
           locale="es"
-          defaultDate="2019-04-06"
+          default-date="2019-04-06"
           style="--rgb: 170, 10, 10"
         >
           <input id="date" type="date" value="2018-06-06" />
