--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
         </aeon-datepicker>
       </p-->
       <p>
+        <label for="date2">Date</label>
         <aeon-datepicker default-date="2020-01-01" default-time="19:30">
           <input
             id="date2"
+            name="date2"
             type="date"
             value="2020-04-06"
             placeholder="Start date"
