--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       input {
         font-size: inherit;
         font-family: inherit;
+        padding: 0.3rem;
       }
     </style>
-    <script src="/src/app.js" type="module"></script>
+    <script src="/dist/aeon.js" type="module"></script>
   </head>
   <body>
     <h1>
@@ -26,49 +27,31 @@
 
     <form>
       <p>
-        <input type="date" />
-      </p>
-      <!--p>
-        <aeon-datepicker confirm-on-date>
-          <input id="date3" type="date" value="2020-04-06" />
-        </aeon-datepicker>
-      </p-->
-      <p>
         <label for="date2">Date</label>
         <aeon-datepicker default-date="2020-01-01" default-time="19:30">
           <input
-            id="date2"
-            name="date2"
+            id="date"
+            name="date"
             type="date"
             value="2020-04-06"
             placeholder="Start date"
           />
-          <input id="time2" type="time" />
+          <input id="time" type="time" />
         </aeon-datepicker>
       </p>
-      <!--p>
-        <aeon-datepicker
-          locale="es"
-          default-date="2019-04-06"
-          style="--rgb: 170, 10, 10"
-        >
-          <input id="date" type="date" value="2018-06-06" />
-          <input id="time" type="time" value="05:19" />
-        </aeon-datepicker>
-      </p-->
       <button>
         Go
       </button>
-      <p>
-        <input />
-      </p>
     </form>
 
     <script>
       const form = document.querySelector('form');
       form.addEventListener('submit', function(event) {
         event.preventDefault();
-        console.log(form.querySelector('#date').value);
+        console.log(
+          form.querySelector('#date').value,
+          form.querySelector('#time').value
+        );
       });
       form.addEventListener('change', function(event) {
         console.log('change', event);
