--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         padding: 0.3rem;
       }
     </style>
-    <script src="/dist/aeon.js" type="module"></script>
+    <script
+      src="https://unpkg.com/@lamplightdev/aeon@0.0.2/dist/aeon.js"
+      type="module"
+    ></script>
   </head>
   <body>
     <h1>
