demo pages update

--- a/es5.html
+++ b/es5.html
@@ -49,7 +49,7 @@
       WebComponents.waitFor(function() {
         var head = document.getElementsByTagName('head')[0];
         var script = document.createElement('script');
-        script.src = 'dist/aeon-es5.js';
+        script.src = './dist/aeon-es5.js';
         head.appendChild(script);
 
         window.ShadyCSS &&
