--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         --cal-rgb: 170, 10, 10;
       }
     </style>
-    <script src="/src/aeon.js" type="module"></script>
+    <script src="./dist/aeon.js" type="module"></script>
   </head>
   <body>
     <h1>
