--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       }
 
       :root {
-        --cal-rgb: 170, 10, 10;
+        --aeon-rgb: 170, 10, 10;
       }
     </style>
     <script src="./dist/aeon.js" type="module"></script>
